tests/errors/compiler/array_before_func/int_func_return_arr.c
int func(int a)
{
	int arr[1] = { a };
	return arr;
}

void main()
{

}
